# speech_recognition

./: CMakeLists.txt  README.md  package.xml
scripts/: speech_recognition.py
