<?xml version="1.0"?>
<package>
  <name>speech_recognition</name>
  <version>0.1.0</version>
  <description>The speech_recognition package</description>

  <maintainer email="groadpg@gmail.com">Ryodo Tanaka</maintainer>
  <license>MIT</license>
  <url type="repository">http://github.com/Nishida-Lab/speech_recognition</url>
  <author email="groadpg@gmail.com">Ryodo Tanaka</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rwt_speech_recognition</run_depend>
  <run_depend>speech_recognition_msgs</run_depend>
  
</package>
